--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,10 @@
         clientSocket.emit("notice", { name: "Thomas", age: 30 });
 
         // // Emit token
-        // clientSocket.emit('authenticate', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwYXlsb2FkIjp7InVzZXJfaWQiOjUsInJvbGUiOiJ1c2VyIn0sImV4cCI6MTYyNDM0ODMwMiwiaWF0IjoxNjIxNzU2MzAyfQ.sSciaHm0ykkCdUQKlH1cWdWGZexER0bRPuAW2k33PAE');
+        clientSocket.emit(
+          "authenticate",
+          "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwYXlsb2FkIjp7InVzZXJfaWQiOjExLCJyb2xlIjoidXNlciJ9LCJleHAiOjE3MjgzMjExMTksImlhdCI6MTcyNTcyOTExOX0._PbveYh6ArXvMCq1d1v-t3vXgEMOUjSAbZRsnCyX-dA"
+        );
       });
 
       // clientSocket.on('authenticated', () => {
